2010-06-16 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-gtk-utils.c:
	* src/nact/nact-gtk-utils.h
	(nact_gtk_utils_select_file, nact_gtk_utils_select_dir): New functions.

	* src/nact/nact-icommand-tab.c: Updated accordingly.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_slist_setup_element): New function.

	* src/api/na-icontext.h:
	* src/core/na-icontext.c (na_icontext_set_only_desktop,	na_icontext_set_not_desktop):
	New functions.

	* src/api/na-object-api.h (na_object_set_only_desktop, na_object_set_not_desktop):
	New macros.

	* src/nact/nact-ienvironment-tab.c: Implement desktop choice.

	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nautilus-actions-config-tool.ui: Review NactICapabilitiesTab page.

	* src/nact/nact-ischemes-tab.c: Review NactISchemesTab page.

	* src/nact/nact-ifolders-tab.c: Review NactIFoldersTab page.

	* src/nact/nact-ibasenames-tab.c: Review NactIBasenamesTab page.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_on_enable_tab):
	Removed function.

	* src/nact/nact-icommand-tab.c:
	* src/nact/nact-icommand-tab.h: Review NactICommandTab page.

	* src/core/na-object-action-factory.c: Fix comment.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-iaction-tab.h: Homogeneïse the code.

2010-06-15 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-tab.c:
	* src/nact/nact-main-tab.h (nact_main_tab_get_context):
	New function.

	* src/nact/nact-iaction-tab.c:
	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-ienvironment-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c:
	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.c:
	Remove irrelevant TAB_UPDATABLE_SIGNAL_ENABLE_TAB signal.

	* src/nact/nact-match-list.c:
	Do not try to get filters when there is no current context.

	* src/nact/nact-main-window.c:
	Do not mark the application as modified when list is empty.