@@ -1,3 +1,7 @@
+2010-06-17 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/nact/nact-ienvironment-tab.c: Implement NactIEnvironmentTab page.
+
 2010-06-16 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/nact/nact-gtk-utils.c:
